--- a/index.html
+++ b/index.html
@@ -8,66 +8,34 @@
             <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         </head>
         <body> <!-- Bagian body: berisi konten yang akan tampil di halaman -->
-
-            <section id="hero" class="fade-in scroll-fade"> <!-- Bagian pembuka utama -->
-                <div class="hero-content"> <!-- Kontainer isi hero -->
-                    <div class="hero-content-logo">
-                        <img src="img/logo2.png" alt="Logo Muhammad Gatan Rifani" class="hero-logo">
-                    </div> <!-- Logo di bagian hero -->
-                    <div class="hero-conten-judul">
-                        <h1><span>Muhammad Gatan Rifani</span></h1> <!-- Judul besar dengan highlight -->
-                        <p>I'm <span id="dynamic-text"></span></p> <!-- Deskripsi singkat -->
-                    </div>
-                    <!--<div class="hero-buttons">--> <!-- Kontainer tombol -->
-                        <!--<a href="#projects" class="btn-primary">Lihat Proyek</a>--> <!-- Tombol utama -->
-                        <!--<a href="#contact" class="btn-secondary">Hubungi Saya</a>--> <!-- Tombol sekunder -->
-                    <!--</div>-->
-                </div>
-            </section>
-
-            <!-- Header --> 
-            <!--<header id="home">--> <!-- Bagian kepala halaman -->
-                <!--<div class="judul">-->
-                    <!--<h1>Halo, Saya Muhammad Gatan Rifani</h1>-->
-                <!--</div>--> <!-- Judul utama halaman -->
-
-                <!-- Tombol Hamburger -->
-                <!--<div class="hamburger" id="hamburger">--> <!-- Tombol menu untuk perangkat mobile -->
-                    <!--<span class="bar"></span>--> <!-- Garis atas -->
-                    <!--<span class="bar"></span>--> <!-- Garis tengah -->
-                    <!--<span class="bar"></span>--> <!-- Garis bawah -->
-                <!--</div>-->
-
-                <!-- Menu Navigasi -->
-                <!--<nav id="navMenu">-->
-                    <!--<a href="#home">Home</a>
-                    <a href="#about">Tentang Saya</a>
-                    <a href="#projects">Proyek</a>
-                    <a href="#contact">Kontak</a>
-                </nav>-->
-                <!--<button id="theme-toggle" aria-label="Ganti Tema">
-                    <svg id="theme-icon" width="20" height="20" viewBox="0 0 24 24" fill="none">
-                        <path id="sun" d="M12 4V2M12 22v-2M4.22 4.22L2.81 2.81M19.78 19.78l1.41 1.41M4 12H2m20 0h-2M4.22 19.78l-1.41 1.41M19.78 4.22l1.41-1.41" stroke="currentColor" stroke-width="2"/>
-                        <circle cx="12" cy="12" r="5" stroke="currentColor" stroke-width="2"/>
-                    </svg>
-                </button> (Tombol ganti tema)-->
-            <!--</header>-->
-
             <!-- Konten utama -->
             <main> <!-- Elemen utama untuk konten penting -->
-
+                <!-- Bagian pembuka utama -->
+                <section id="hero" class="fade-in scroll-fade"> <!-- Bagian pembuka utama -->
+                    <div class="hero-content"> <!-- Kontainer isi hero -->
+                        <div class="hero-content-logo"> <!-- Kontainer logo di bagian hero -->
+                            <img src="img/logo2.png" alt="Logo Muhammad Gatan Rifani" class="hero-logo">  <!-- Logo di bagian hero -->
+                        </div>
+                        <div class="hero-conten-judul"> <!-- Kontainer judul di bagian hero -->
+                            <h1><span>Muhammad Gatan Rifani</span></h1> <!-- Judul besar dengan highlight -->
+                            <p>I'm <span id="dynamic-text"></span></p> <!-- Deskripsi singkat -->
+                        </div>
+                    </div>
+                </section>
                 <!-- Bagian Tentang Saya -->
                 <section id="about" class="fade-in scroll-fade" > <!-- Section untuk "Tentang Saya", id untuk navigasi --><!-- class=fade-in-->
                     <h2>About</h2> <!-- Judul section -->
-                    <p>Seorang Electrical Engineer yang ahli dalam pemrograman PLC dan mampu menerjemahkan logika kontrol ke dalam program PLC dan juga mampu mengintegrasikannya dengan perangkat lain.</p> <!-- Paragraf deskripsi -->
+                    <p>Mahasiswa Teknik Elektro Universitas Wijayakusuma Purwokerto dengan pengalaman sebagai Helper Engineer dalam Turn Around
+2025 Kilang Pertamina Cilacap (PT Putranata Adi Mandiri). Terlibat dalam kalibrasi dan pengujian lebih dari 30 unit transmitter,
+serta dokumentasi teknis dengan akurasi kerja mencapai 95%. Mampu menganalisis logika digital dan perhitungan kalibrasi dasar,
+serta terbiasa bekerja teliti dan komunikatif dalam tim teknis. Tertarik berkontribusi pada perusahaan anda khususnya di bidang
+instalasi, dukungan teknis lapangan, dan pengembangan sistem IoT.</p> <!-- Paragraf deskripsi -->
                 </section>
-
                 <!-- Bagian Proyek -->
                 <section id="projects" class="fade-in scroll-fade"> <!-- Section untuk "Proyek" --><!-- class=fade-in-->
                     <h2>Proyek</h2> <!-- Judul section -->
                     <p>Berikut beberapa pengalaman Saya:</p> <!-- Paragraf pengantar -->
                     <div class="project-grid"> <!-- Kontainer grid proyek -->
-
                         <div class="project-card scroll-fade"> <!-- Satu kartu proyek -->
                             <img src="h  ttps://via.placeholder.com/400x250" alt="Proyek 1"> <!--Gambar proyek-->
                             <div class="project-info"> <!-- Kontainer informasi proyek --> 
@@ -75,7 +43,6 @@
                                 <p>Deskripsi singkat tentang proyek 1.</p> <!-- Deskripsi proyek -->
                             </div>
                         </div>
-
                         <div class="project-card scroll-fade"> <!-- Satu kartu proyek -->
                             <img src="https://via.placeholder.com/400x250" alt="Proyek 2"> <!--Gambar proyek-->
                             <div class="project-info"> <!-- Kontainer informasi proyek -->
@@ -83,15 +50,13 @@
                                 <p>Deskripsi singkat tentang proyek 2.</p> <!-- Deskripsi proyek -->
                             </div>
                         </div>
-
                         <div class="project-card scroll-fade"> <!-- Satu kartu proyek -->
                             <img src="https://via.placeholder.com/400x250" alt="Proyek 3"> <!--Gambar proyek-->
                             <div class="project-info"> <!-- Kontainer informasi proyek -->
                                 <h3>Proyek 3</h3> <!-- Judul proyek -->
                                 <p>Deskripsi singkat tentang proyek 3.</p> <!-- Deskripsi proyek -->
                             </div>
-                        </div>
-                        
+                        </div>   
                         <div class="project-card scroll-fade"> <!-- Satu kartu proyek -->
                             <img src="https://via.placeholder.com/400x250" alt="Proyek 4"> <!--Gambar proyek-->
                             <div class="project-info"> <!-- Kontainer informasi proyek -->
@@ -99,20 +64,18 @@
                                 <p>Deskripsi singkat tentang proyek 4.</p> <!-- Deskripsi proyek -->
                             </div>
                         </div>
-
                     </div> <!-- Penutup kontainer grid proyek -->
                 </section>
-                <section class="parallax" style="background-image: url('https://source.unsplash.com/random/1600x900/?nature,water'); height: 400px;"></section> <!-- Bagian parallax dengan gambar acak dari Unsplash -->
-
-                <!-- Bagian Kontak -->
-                <section id="contact" class="fade-in scroll-fade"> <!-- Section untuk "Kontak" --><!-- class=fade-in-->
-                    <h2>Kontak</h2> <!-- Judul section -->
-                    <p>Email: muhammadgatanrifani@gmail.com</p> <!-- Paragraf berisi email -->
-                </section>
+                <!-- Bagian Parallax -->
+                <section class="parallax" style="background-image: url('https://source.unsplash.com/random/1600x900/?nature,water'); height: 400px;">                    
+                </section> <!-- Bagian parallax dengan gambar acak dari Unsplash -->
             </main>
-        
+            <!-- Bagian Kontak -->
+            <section id="contact" class="fade-in scroll-fade"> <!-- Section untuk "Kontak" --><!-- class=fade-in-->
+                <h2>Kontak</h2> <!-- Judul section -->
+                <p>Email: muhammadgatanrifani@gmail.com</p> <!-- Paragraf berisi email -->
+            </section>
             <section id="contact" class="scroll-fade">
-            <h2>Kontak Saya</h2>
             <form id="contact-form"> <!--bagi form kontak-->
                 <label for="name">Nama</label> <!-- Label untuk input nama -->
                 <input type="text" id="name" name="name" placeholder="Masukkan nama" required> <!-- Input teks untuk nama, wajib diisi -->
@@ -165,7 +128,6 @@
             <script>
             AOS.init();
             </script>
-
             <!--script.js-->
             <script src="script.js"></script> <!-- Menghubungkan file JavaScript eksternal untuk interaktivitas -->
         </body>
