--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
             <meta name="description" content="Portofolio Muhammad Gatan Rifani - Web Developer & Electrical Engineer"> <!-- Metadata untuk SEO, berisi deskripsi halaman -->
             <meta name="keywords" content="Muhammad Gatan Rifani, Portofolio, Web Developer, Electrical Engineer, IoT, Embedded System"> <!-- Metadata untuk SEO, berisi deskripsi dan kata kunci -->
             <meta name="author" content="Muhammad Gatan Rifani"> <!-- Metadata untuk SEO dan informasi penulis -->
+            <!-- Open Graph untuk media sosial -->
+            <meta property="og:title" content="Portfolio Gatan Dulbes - Web Developer">
+            <meta property="og:description" content="Web Developer & IoT Enthusiast. Lihat project dan artikel saya di sini.">
+            <meta property="og:image" content="https://contoh.com/thumbnail.jpg"> <!-- Gambar thumbnail untuk media sosial -->
+            <meta property="og:url" content="https://muhammadgatanrifani.netlify.app"> <!-- URL halaman ini -->
+            <meta property="og:type" content="website">
+            <!-- Favicon -->
+            <link rel="icon" href="img/logo.ico" alt="" type="image/x-icon"> <!-- Menghubungkan favicon untuk ikon di tab browser -->
         </head>
         <body> <!-- Bagian body: berisi konten yang akan tampil di halaman -->
             <!-- Konten utama -->
@@ -154,6 +162,66 @@ Memiliki kemampuan komunikasi dan kerja tim yang baik.</p> <!-- Paragraf pengant
                                 <div class="portfolio-info">
                                     <h3>Mobile App UI</h3>
                                     <p>Desain antarmuka aplikasi mobile untuk layanan edukasi online.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- Bagian Testimoni -->
+                <section id="testimonials" class="testimonials scroll-fade">
+                    <h2>Testimoni Klien</h2>
+                    <div class="testimonial-container">
+                        <div class="testimonial active">
+                            <p>"Kerja sama yang luar biasa! Proyek selesai tepat waktu dan hasilnya melebihi ekspektasi."</p>
+                            <h4>- Andi Wijaya, CEO PT Maju Jaya</h4>
+                        </div>
+                        <div class="testimonial">
+                            <p>"Komunikasi lancar dan hasil sangat profesional. Pasti akan kerja sama lagi."</p>
+                            <h4>- Siti Rahma, Founder Rahma Design</h4>
+                        </div>
+                        <div class="testimonial">
+                            <p>"Pelayanan ramah dan cepat tanggap. Desainnya sangat kreatif."</p>
+                            <h4>- Budi Santoso, Manager TechCorp</h4>
+                        </div>
+                    </div>
+                    <div class="testimonial-controls">
+                        <button id="prev">⟨</button>
+                        <button id="next">⟩</button>
+                    </div>
+                </section>
+                <!-- ======= Blog Section ======= -->
+                <section id="blog" class="blog-section scroll-fade">
+                    <div class="container">
+                        <h2>Blog</h2>
+                        <div class="blog-container">
+                            <!-- Blog Card 1 -->
+                            <div class="blog-card scroll-fade">
+                                <img src="img/blog1.jpg" alt="Blog 1">
+                                <div class="blog-content">
+                                <h3>Tips Belajar Pemrograman untuk Pemula</h3>
+                                <span class="blog-date">12 Agustus 2025</span>
+                                <p>Belajar coding itu seperti belajar bahasa baru. Berikut tips sederhana untuk memulainya...</p>
+                                <a href="#" class="read-more">Read More</a>
+                                </div>
+                            </div>
+                            <!-- Blog Card 2 -->
+                            <div class="blog-card scroll-fade">
+                                <img src="img/blog2.jpg" alt="Blog 2">
+                                <div class="blog-content">
+                                <h3>5 Project Website yang Cocok untuk Portofolio</h3>
+                                <span class="blog-date">10 Agustus 2025</span>
+                                <p>Ingin portofolio terlihat profesional? Coba buat salah satu dari lima project ini...</p>
+                                <a href="#" class="read-more">Read More</a>
+                                </div>
+                            </div>
+                            <!-- Blog Card 3 -->
+                            <div class="blog-card scroll-fade">
+                                <img src="img/blog3.jpg" alt="Blog 3">
+                                <div class="blog-content">
+                                <h3>Mengenal Teknologi Front-End dan Back-End</h3>
+                                <span class="blog-date">8 Agustus 2025</span>
+                                <p>Banyak yang masih bingung perbedaan front-end dan back-end. Yuk, kita bahas dengan santai...</p>
+                                <a href="#" class="read-more">Read More</a>
                                 </div>
                             </div>
                         </div>
