--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <meta property="og:image" content="https://contoh.com/thumbnail.jpg"> <!-- Gambar thumbnail untuk media sosial -->
             <meta property="og:url" content="https://muhammadgatanrifani.netlify.app"> <!-- URL halaman ini -->
             <meta property="og:type" content="website">
+            <meta name="google-site-verification" content="s5JgxHbi9qK0fcUAvL3By49e3Zyr9-elhPtPh_MZ7tQ" />
             <!-- Favicon -->
             <link rel="icon" href="img/logo.ico" alt="" type="image/x-icon"> <!-- Menghubungkan favicon untuk ikon di tab browser -->
         </head>
